--- a/reserveTime/core/templates/company-admin-page.html
+++ b/reserveTime/core/templates/company-admin-page.html
@@ -31,7 +31,7 @@
                     </a>
                 </div>
                 <div class="right">
-                    <a href="{% url 'account:company-update' user.pk %}" class="d-flex user-profile-link">
+                    <a href="{% url 'account:user-profile' user.pk %}" class="d-flex user-profile-link">
                         <div class="side">
                             {% if user.profile_img %}
                             <img src="{{user.profile_img.url}}" width="50px" alt="Profile photo">
