--- a/reserveTime/static/css/style.css
+++ b/reserveTime/static/css/style.css
@@ -65,7 +65,7 @@ body{
 }
 .right i{
     color: #000;
-    font-size: 22px;
+    font-size: 25px;
 }
 
 .user-profile-link{
@@ -161,6 +161,17 @@ body{
     width: 40px;
     height: 40px;
     background-color: #ccc;
+    border-radius: 50%;
+}
+
+.notification-count{
+    position: absolute;
+    top: 18px;
+    right: 0px;
+    background-color: red;
+    color: white;
+    width: 10px;
+    height: 10px;
     border-radius: 50%;
 }
 
