--- a/reserveTime/core/templates/company-tables.html
+++ b/reserveTime/core/templates/company-tables.html
@@ -161,7 +161,7 @@
                     <div class="row row-cols-4">
                         
                         {% for table in inside_tables %}
-                            <div class="col">
+                            <div class="col-6 col-sm-3 d-flex justify-content-center table-items">
                                 <span class="table-span">
                                     <div class="icon-box d-flex">
                                         <i class="far fa-clock" data-toggle="modal" data-target="#time{{table.pk}}"></i>
@@ -227,7 +227,7 @@
                     <div class="row row-cols-4">
                         
                         {% for table in outside_tables %}
-                            <div class="col">
+                            <div class="col-6 col-sm-3 d-flex justify-content-center table-items">
                                 <span class="table-span">
                                     <div class="icon-box d-flex">
                                         <i class="far fa-clock" data-toggle="modal" data-target="#time{{table.pk}}"></i>
