--- a/reserveTime/static/css/style.css
+++ b/reserveTime/static/css/style.css
@@ -178,20 +178,22 @@ body{
 .right button{
     outline: none;
 }
-
-
 h3{
     margin: 20px 0;
 }
 
 .card-list{
-    padding: 10px;
+    padding: 10px 0 ; 
+    flex-wrap: wrap;
 }
 .card-list-bellow{
     border-bottom: 1px solid #ccc;
 }
+.card-box{
+    margin-bottom: 20px;
+}
 .card{
-    margin: 10px;
+    /* margin: 10px; */
     transition: .3s;
 }
 
@@ -204,8 +206,7 @@ h3{
 
 .card-img{
     position: relative;
-    width: 250px;
-    height: 160px;
+    height: 185px;
 }
 
 .card-img img{
@@ -372,17 +373,20 @@ footer{
     align-items: center;
     justify-content: center;
 }
-
+/* 
 .company-profile-img img{
     width: 100%;
     height: 75%;
-}
+} */
 
 .company-profile-img{
     display: flex;
     align-items: center;
 }
-
+.company-profile-img img{
+    width: 100%;
+    height: 160px;
+}
 .company-item .name{
     padding: 0;
 }
@@ -631,10 +635,8 @@ box-shadow: 0px 3px 19px -7px rgba(0,0,0,0.75);
     padding-top: 10px;
     margin-bottom: 20px;
  }
-
-.company-profile-img img {
-    width: 100%;
-    height: 100%;
+.company-list a{
+ text-decoration: none;
 }
 .company-item-link{
     color: #000000;
@@ -649,6 +651,7 @@ box-shadow: 0px 3px 19px -7px rgba(0,0,0,0.75);
     border: 1px solid #ccc;
     border-radius: 15px;
     margin-top: 10px;
+    color: #000;
 }
 .company-list-container{
     border-radius: 15px;
