--- a/reserveTime/core/templates/write-comment.html
+++ b/reserveTime/core/templates/write-comment.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="{% static 'css/reserve-page.css' %}">
     <link rel="stylesheet" href="{% static 'css/raiting.css' %}">
     <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
+    
+    
     <title>Company Profile</title>
 </head>
 <body id="raiting-body">
@@ -69,23 +71,90 @@
         <div class="container main-raiting-container pb-3" style="padding: 0;">
             <h3 class="text-center full pt-3 pb-3 bold bottom-border">Give your feedback to "{{company.company_name}}"</h3>  
             
+            <style>
+                .rating-menu{
+                    height: 45%;
+                }
+                .rating-menu li{
+                    justify-content: space-between;
+                    align-items: center;
+                    width: 70%;
+                    margin: auto;
+                }
+                .like-box input{
+                    position: absolute;
+                    top: -9999px;
+                }
+            </style>
+
             <div class="row mt-3">
+                
                 <form  class="full m-auto" style="width: 80%;" method="POST" enctype="multipart/form-data">
                   {% csrf_token %}
-                    <div class="star-rating">
-                        <fieldset>
-                            <input type="radio" id="star5" name="rating" value="5" /><label for="star5" title="Outstanding">5 stars</label>
-                            <input type="radio" id="star4" name="rating" value="4" /><label for="star4" title="Very Good">4 stars</label>
-                            <input type="radio" id="star3" name="rating" value="3" /><label for="star3" title="Good">3 stars</label>
-                            <input type="radio" id="star2" name="rating" value="2" /><label for="star2" title="Poor">2 stars</label>
-                            <input type="radio" id="star1" name="rating" value="1" /><label for="star1" title="Very Poor">1 star</label>
-                        </fieldset>
+                    <div class="row mb-3">
+                        <div class="col-6">
+                            <canvas id="myChart"></canvas>
+                            <div class="d-column align-items-center">
+                                <span style="color: #6f737b;" class="mb-2">Based on 34 recommendation</span>
+                                <span>Would you recommend this restaurant?</span>
+                                <div class="d-flex like-box mt-2">
+                                    <input type="radio" value="1" name="like" id='liked'><label class="btn btn-outline-success mr-2" for="liked">Yes</label>
+                                    <input type="radio" value="0" name="like" id='notLiked'><label class="btn btn-outline-danger" for="notLiked">No</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6 d-flex align-items-center">
+                            <ul class="rating-menu d-column full">
+                                <li class="d-flex">
+                                    <span>Food</span>
+                                    <div class="star-rating">
+                                        <fieldset>
+                                            <input type="radio" id="Foodstar5" name="ratingFood" value="5" /><label for="Foodstar5" title="Outstanding">5 stars</label>
+                                            <input type="radio" id="Foodstar4" name="ratingFood" value="4" /><label for="Foodstar4" title="Very Good">4 stars</label>
+                                            <input type="radio" id="Foodstar3" name="ratingFood" value="3" /><label for="Foodstar3" title="Good">3 stars</label>
+                                            <input type="radio" id="Foodstar2" name="ratingFood" value="2" /><label for="Foodstar2" title="Poor">2 stars</label>
+                                            <input type="radio" id="Foodstar1" name="ratingFood" value="1" /><label for="Foodstar1" title="Very Poor">1 star</label>
+                                        </fieldset>
+                                    </div>
+                                </li>
+                                <li class="d-flex">
+                                    <span>Service</span>
+                                    <div class="star-rating">
+                                        <fieldset>
+                                            <input type="radio" id="Servicestar5" name="ratingService" value="5" /><label for="Servicestar5" title="Outstanding">5 stars</label>
+                                            <input type="radio" id="Servicestar4" name="ratingService" value="4" /><label for="Servicestar4" title="Very Good">4 stars</label>
+                                            <input type="radio" id="Servicestar3" name="ratingService" value="3" /><label for="Servicestar3" title="Good">3 stars</label>
+                                            <input type="radio" id="Servicestar2" name="ratingService" value="2" /><label for="Servicestar2" title="Poor">2 stars</label>
+                                            <input type="radio" id="Servicestar1" name="ratingService" value="1" /><label for="Servicestar1" title="Very Poor">1 star</label>
+                                        </fieldset>
+                                    </div>
+                                </li>
+                                <li class="d-flex">
+                                    <span>Ambience</span>
+                                    <div class="star-rating">
+                                        <fieldset>
+                                            <input type="radio" id="Ambiencestar5" name="ratingAmbience" value="5" /><label for="Ambiencestar5" title="Outstanding">5 stars</label>
+                                            <input type="radio" id="Ambiencestar4" name="ratingAmbience" value="4" /><label for="Ambiencestar4" title="Very Good">4 stars</label>
+                                            <input type="radio" id="Ambiencestar3" name="ratingAmbience" value="3" /><label for="Ambiencestar3" title="Good">3 stars</label>
+                                            <input type="radio" id="Ambiencestar2" name="ratingAmbience" value="2" /><label for="Ambiencestar2" title="Poor">2 stars</label>
+                                            <input type="radio" id="Ambiencestar1" name="ratingAmbience" value="1" /><label for="Ambiencestar1" title="Very Poor">1 star</label>
+                                        </fieldset>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="form-group">
                         {{form.text}}
                     </div>
                     <div class="form-group">
-                        {{form.comment_image}}
+                        <div class="d-flex">
+                            <span class="mr-2">You can add photo from our restaurant</span>
+                            <div class="d-flex">
+                                <label for="upload-img" style="width: 200px; color: green;" class="add-img-label">Add Photo<i class="ml-2 fas fa-plus-circle"></i></label>
+                                {{form.comment_image}}
+                            </div>
+                        </div>
                     </div>
                     <input type="submit" class="float-r btn btn-success" value="Send Review">
                 </form>
@@ -93,11 +162,41 @@
         </div>
     </main>
     
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+
     <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/owl.carousel.min.js' %}"></script>
     <script src="{% static 'js/main.js' %}"></script>
     <script src="{% static 'js/reserve-page.js' %}"></script>
+
+    <script >
+       var ctx = document.getElementById('myChart').getContext('2d');
+       let labels = ['Liked', 'Not Liked']
+       let colorHex = ['#2ECC71','red']
+
+        var chart = new Chart(ctx, {
+            type: 'pie',
+
+            data: {
+                labels: labels,
+                datasets: [{
+                    backgroundColor: colorHex,
+                    data: [80, 20]
+                }]
+            },
+
+            // Configuration options go here
+            options: {
+                responsive : true,
+                legend : {
+                    position : 'bottom'
+                }
+            }
+        }); 
+    </script>
+
     <script>
         $(document).ready(function(){
             $('.header-btn').click(function(){
