--- a/reserveTime/static/css/style.css
+++ b/reserveTime/static/css/style.css
@@ -64,7 +64,7 @@ body{
     border-radius: 50%;
 }
 .right i{
-    color: #000;
+    color: rgb(53, 52, 52);
     font-size: 25px;
 }
 
@@ -160,7 +160,7 @@ body{
 .user-profile button{
     width: 40px;
     height: 40px;
-    background-color: #ccc;
+    background-color: #E5E5E5;
     border-radius: 50%;
 }
 
