--- a/reserveTime/static/css/user-profile.css
+++ b/reserveTime/static/css/user-profile.css
@@ -1,6 +1,6 @@
 .inner-container{
     position: relative;
-    width: 80%;
+    /* width: 80%; */
     margin: auto;
 }
 
@@ -52,7 +52,7 @@
 }
 
 #profile-body{
-    background-color: #E9E9E9;
+    background-color: #f1f2f4;
 }
 
 header .container{
